--- a/GitHubSearcher/scenes/details/user/UserDetails.storyboard
+++ b/GitHubSearcher/scenes/details/user/UserDetails.storyboard
@@ -39,15 +39,6 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="enB-md-dtd">
-                                <rect key="frame" x="75" y="339" width="225" height="60"/>
-                                <color key="backgroundColor" red="0.83741801979999997" green="0.83743780850000005" blue="0.83742713930000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="lke-zI-roD"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
-                                <state key="normal" title="Check on GitHub"/>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="score" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="acS-su-DeR">
                                 <rect key="frame" x="100" y="294" width="175" height="21"/>
                                 <color key="tintColor" red="0.60264706611633301" green="0.74604612588882446" blue="0.92070174217224121" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -55,22 +46,49 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Followers" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hRg-ft-g2V">
+                                <rect key="frame" x="100" y="331" width="175" height="24"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="count" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cfk-R6-aPi">
+                                <rect key="frame" x="100" y="363" width="175" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="enB-md-dtd">
+                                <rect key="frame" x="75" y="408" width="225" height="60"/>
+                                <color key="backgroundColor" red="0.83741801979999997" green="0.83743780850000005" blue="0.83742713930000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="lke-zI-roD"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                <state key="normal" title="Check on GitHub"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="HRa-fW-64Q" firstAttribute="trailing" secondItem="Cfk-R6-aPi" secondAttribute="trailing" constant="100" id="1jy-37-zxm"/>
                             <constraint firstItem="X7s-bP-rRg" firstAttribute="leading" secondItem="HRa-fW-64Q" secondAttribute="leading" constant="100" id="1oD-8V-VlX"/>
                             <constraint firstItem="HRa-fW-64Q" firstAttribute="trailing" secondItem="hFK-Ao-y0O" secondAttribute="trailing" constant="16" id="4eH-uN-46a"/>
+                            <constraint firstItem="HRa-fW-64Q" firstAttribute="trailing" secondItem="hRg-ft-g2V" secondAttribute="trailing" constant="100" id="6Na-mL-Z1p"/>
                             <constraint firstItem="HRa-fW-64Q" firstAttribute="trailing" secondItem="s4A-zy-ZOi" secondAttribute="trailing" constant="100" id="6el-Wy-N87"/>
+                            <constraint firstItem="hRg-ft-g2V" firstAttribute="leading" secondItem="HRa-fW-64Q" secondAttribute="leading" constant="100" id="90A-Eu-E7L"/>
+                            <constraint firstItem="hRg-ft-g2V" firstAttribute="top" secondItem="acS-su-DeR" secondAttribute="bottom" constant="16" id="9yA-P7-RNA"/>
                             <constraint firstItem="s4A-zy-ZOi" firstAttribute="top" secondItem="hFK-Ao-y0O" secondAttribute="bottom" constant="16" id="ATe-rF-xtf"/>
                             <constraint firstItem="HRa-fW-64Q" firstAttribute="trailing" secondItem="J78-Vu-5Kw" secondAttribute="trailing" constant="50" id="DZu-zj-Unm"/>
                             <constraint firstItem="J78-Vu-5Kw" firstAttribute="leading" secondItem="HRa-fW-64Q" secondAttribute="leading" constant="50" id="Hig-bl-TuB"/>
                             <constraint firstItem="HRa-fW-64Q" firstAttribute="trailing" secondItem="acS-su-DeR" secondAttribute="trailing" constant="100" id="N5G-14-iuq"/>
                             <constraint firstItem="HRa-fW-64Q" firstAttribute="trailing" secondItem="enB-md-dtd" secondAttribute="trailing" constant="75" id="RFL-Ku-Wbh"/>
-                            <constraint firstItem="enB-md-dtd" firstAttribute="top" secondItem="acS-su-DeR" secondAttribute="bottom" constant="24" id="XrH-Bn-3oX"/>
+                            <constraint firstItem="Cfk-R6-aPi" firstAttribute="leading" secondItem="HRa-fW-64Q" secondAttribute="leading" constant="100" id="Xxc-VU-nDZ"/>
+                            <constraint firstItem="enB-md-dtd" firstAttribute="top" secondItem="Cfk-R6-aPi" secondAttribute="bottom" constant="24" id="Zol-Ov-zuW"/>
                             <constraint firstItem="J78-Vu-5Kw" firstAttribute="top" secondItem="s4A-zy-ZOi" secondAttribute="bottom" constant="8" id="d7w-N7-zIW"/>
                             <constraint firstItem="hFK-Ao-y0O" firstAttribute="top" secondItem="HRa-fW-64Q" secondAttribute="top" constant="24" id="dsA-Ac-f0w"/>
                             <constraint firstItem="enB-md-dtd" firstAttribute="leading" secondItem="HRa-fW-64Q" secondAttribute="leading" constant="75" id="eVJ-vM-oR1"/>
                             <constraint firstItem="HRa-fW-64Q" firstAttribute="trailing" secondItem="X7s-bP-rRg" secondAttribute="trailing" constant="100" id="ecu-TR-1Td"/>
+                            <constraint firstItem="Cfk-R6-aPi" firstAttribute="top" secondItem="hRg-ft-g2V" secondAttribute="bottom" constant="8" id="eo9-gx-J2n"/>
                             <constraint firstItem="acS-su-DeR" firstAttribute="top" secondItem="X7s-bP-rRg" secondAttribute="bottom" constant="8" id="i64-tH-UFn"/>
                             <constraint firstItem="acS-su-DeR" firstAttribute="leading" secondItem="HRa-fW-64Q" secondAttribute="leading" constant="100" id="lMm-RM-Qf8"/>
                             <constraint firstItem="s4A-zy-ZOi" firstAttribute="leading" secondItem="HRa-fW-64Q" secondAttribute="leading" constant="100" id="sPb-Jx-jwk"/>
@@ -81,6 +99,8 @@
                     </view>
                     <connections>
                         <outlet property="avatarImageView" destination="hFK-Ao-y0O" id="d1S-1z-Yij"/>
+                        <outlet property="followersLabel" destination="Cfk-R6-aPi" id="CQ4-st-xtd"/>
+                        <outlet property="followersTitleLabel" destination="hRg-ft-g2V" id="UzJ-aj-8gf"/>
                         <outlet property="goGitHubButton" destination="enB-md-dtd" id="AID-Hj-57J"/>
                         <outlet property="loginLabel" destination="J78-Vu-5Kw" id="9xn-V5-PnL"/>
                         <outlet property="loginTitleLabel" destination="s4A-zy-ZOi" id="XNo-sd-LNV"/>
