--- a/GitHubSearcher/scenes/details/user/UserDetails.storyboard
+++ b/GitHubSearcher/scenes/details/user/UserDetails.storyboard
@@ -21,7 +21,7 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="hFK-Ao-y0O">
                                 <rect key="frame" x="16" y="44" width="343" height="133"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J78-Vu-5Kw">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading ..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J78-Vu-5Kw">
                                 <rect key="frame" x="50" y="225" width="275" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -39,7 +39,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="score" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="acS-su-DeR">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading ..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="acS-su-DeR">
                                 <rect key="frame" x="100" y="294" width="175" height="21"/>
                                 <color key="tintColor" red="0.60264706611633301" green="0.74604612588882446" blue="0.92070174217224121" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -52,14 +52,14 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="count" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cfk-R6-aPi">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading ..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cfk-R6-aPi">
                                 <rect key="frame" x="100" y="363" width="175" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="enB-md-dtd">
-                                <rect key="frame" x="75" y="408" width="225" height="60"/>
+                                <rect key="frame" x="75" y="477" width="225" height="60"/>
                                 <color key="backgroundColor" red="0.83741801979999997" green="0.83743780850000005" blue="0.83742713930000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="lke-zI-roD"/>
@@ -67,12 +67,26 @@
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                 <state key="normal" title="Check on GitHub"/>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Stars" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2dc-Gt-1ZQ">
+                                <rect key="frame" x="100" y="400" width="175" height="24"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading ..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IST-Ij-xFF">
+                                <rect key="frame" x="100" y="432" width="175" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="HRa-fW-64Q" firstAttribute="trailing" secondItem="2dc-Gt-1ZQ" secondAttribute="trailing" constant="100" id="0V8-JO-hph"/>
                             <constraint firstItem="HRa-fW-64Q" firstAttribute="trailing" secondItem="Cfk-R6-aPi" secondAttribute="trailing" constant="100" id="1jy-37-zxm"/>
                             <constraint firstItem="X7s-bP-rRg" firstAttribute="leading" secondItem="HRa-fW-64Q" secondAttribute="leading" constant="100" id="1oD-8V-VlX"/>
                             <constraint firstItem="HRa-fW-64Q" firstAttribute="trailing" secondItem="hFK-Ao-y0O" secondAttribute="trailing" constant="16" id="4eH-uN-46a"/>
+                            <constraint firstItem="IST-Ij-xFF" firstAttribute="leading" secondItem="HRa-fW-64Q" secondAttribute="leading" constant="100" id="5d8-Rp-Fa3"/>
                             <constraint firstItem="HRa-fW-64Q" firstAttribute="trailing" secondItem="hRg-ft-g2V" secondAttribute="trailing" constant="100" id="6Na-mL-Z1p"/>
                             <constraint firstItem="HRa-fW-64Q" firstAttribute="trailing" secondItem="s4A-zy-ZOi" secondAttribute="trailing" constant="100" id="6el-Wy-N87"/>
                             <constraint firstItem="hRg-ft-g2V" firstAttribute="leading" secondItem="HRa-fW-64Q" secondAttribute="leading" constant="100" id="90A-Eu-E7L"/>
@@ -80,10 +94,13 @@
                             <constraint firstItem="s4A-zy-ZOi" firstAttribute="top" secondItem="hFK-Ao-y0O" secondAttribute="bottom" constant="16" id="ATe-rF-xtf"/>
                             <constraint firstItem="HRa-fW-64Q" firstAttribute="trailing" secondItem="J78-Vu-5Kw" secondAttribute="trailing" constant="50" id="DZu-zj-Unm"/>
                             <constraint firstItem="J78-Vu-5Kw" firstAttribute="leading" secondItem="HRa-fW-64Q" secondAttribute="leading" constant="50" id="Hig-bl-TuB"/>
+                            <constraint firstItem="HRa-fW-64Q" firstAttribute="trailing" secondItem="IST-Ij-xFF" secondAttribute="trailing" constant="100" id="MhL-dM-hmW"/>
                             <constraint firstItem="HRa-fW-64Q" firstAttribute="trailing" secondItem="acS-su-DeR" secondAttribute="trailing" constant="100" id="N5G-14-iuq"/>
+                            <constraint firstItem="2dc-Gt-1ZQ" firstAttribute="leading" secondItem="HRa-fW-64Q" secondAttribute="leading" constant="100" id="NcE-9H-N5W"/>
+                            <constraint firstItem="IST-Ij-xFF" firstAttribute="top" secondItem="2dc-Gt-1ZQ" secondAttribute="bottom" constant="8" id="ORv-nV-2ly"/>
+                            <constraint firstItem="enB-md-dtd" firstAttribute="top" secondItem="IST-Ij-xFF" secondAttribute="bottom" constant="24" id="PPW-RF-wIU"/>
                             <constraint firstItem="HRa-fW-64Q" firstAttribute="trailing" secondItem="enB-md-dtd" secondAttribute="trailing" constant="75" id="RFL-Ku-Wbh"/>
                             <constraint firstItem="Cfk-R6-aPi" firstAttribute="leading" secondItem="HRa-fW-64Q" secondAttribute="leading" constant="100" id="Xxc-VU-nDZ"/>
-                            <constraint firstItem="enB-md-dtd" firstAttribute="top" secondItem="Cfk-R6-aPi" secondAttribute="bottom" constant="24" id="Zol-Ov-zuW"/>
                             <constraint firstItem="J78-Vu-5Kw" firstAttribute="top" secondItem="s4A-zy-ZOi" secondAttribute="bottom" constant="8" id="d7w-N7-zIW"/>
                             <constraint firstItem="hFK-Ao-y0O" firstAttribute="top" secondItem="HRa-fW-64Q" secondAttribute="top" constant="24" id="dsA-Ac-f0w"/>
                             <constraint firstItem="enB-md-dtd" firstAttribute="leading" secondItem="HRa-fW-64Q" secondAttribute="leading" constant="75" id="eVJ-vM-oR1"/>
@@ -91,6 +108,7 @@
                             <constraint firstItem="Cfk-R6-aPi" firstAttribute="top" secondItem="hRg-ft-g2V" secondAttribute="bottom" constant="8" id="eo9-gx-J2n"/>
                             <constraint firstItem="acS-su-DeR" firstAttribute="top" secondItem="X7s-bP-rRg" secondAttribute="bottom" constant="8" id="i64-tH-UFn"/>
                             <constraint firstItem="acS-su-DeR" firstAttribute="leading" secondItem="HRa-fW-64Q" secondAttribute="leading" constant="100" id="lMm-RM-Qf8"/>
+                            <constraint firstItem="2dc-Gt-1ZQ" firstAttribute="top" secondItem="Cfk-R6-aPi" secondAttribute="bottom" constant="16" id="mfv-gW-aew"/>
                             <constraint firstItem="s4A-zy-ZOi" firstAttribute="leading" secondItem="HRa-fW-64Q" secondAttribute="leading" constant="100" id="sPb-Jx-jwk"/>
                             <constraint firstItem="X7s-bP-rRg" firstAttribute="top" secondItem="J78-Vu-5Kw" secondAttribute="bottom" constant="16" id="uZ8-kP-1v4"/>
                             <constraint firstItem="hFK-Ao-y0O" firstAttribute="leading" secondItem="HRa-fW-64Q" secondAttribute="leading" constant="16" id="vj9-MD-Ftf"/>
@@ -106,6 +124,8 @@
                         <outlet property="loginTitleLabel" destination="s4A-zy-ZOi" id="XNo-sd-LNV"/>
                         <outlet property="scoreLabel" destination="acS-su-DeR" id="rnF-Mb-UNH"/>
                         <outlet property="scoreTitleLabel" destination="X7s-bP-rRg" id="pw2-w4-67e"/>
+                        <outlet property="starsLabel" destination="IST-Ij-xFF" id="1H4-1a-LgE"/>
+                        <outlet property="starsTitleLabel" destination="2dc-Gt-1ZQ" id="oze-PE-6II"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cd7-Mr-eOP" userLabel="First Responder" sceneMemberID="firstResponder"/>
